# melange-aoc

./: .ocamlformat  Justfile  Makefile  README.md  dune  dune-project  melange-aoc.opam  melange-aoc.opam.template  package-lock.json  package.json
docs/: index.html  main.js
public/: index.html
src/: DayComponent.re  DayList.re  Home.re  ReactApp.re  Router.re  dune
src/aoc/: aoc.ml  dune
src/aoc/shared/: DayInfo.re  Globals.re  Grid.re  Grid.rei  List.re  Option.re  Shared.re  Shared__Array.re  Shared__Array.rei  Shared__Coord.re  Shared__CoordPair.re  Shared__Globals.re  Shared__Grid.re  Shared__Grid.rei  Shared__List.rei  Shared__Result.re  dune
src/aoc/y2022/: Day01.re  Day01Data.re  Day02.re  Day05.re  Day05Data.re  Day06.re  Day07.re  Day07Data.re  d01.ml  d01.re  d01ml.ml  d02.re  dune
src/aoc/y2022/Day01/: Day01.re
src/aoc/y2022/Day02/: Day02.re  Day02Data.re
src/aoc/y2022/Day03/: Day03.re  Day03Data.re
src/aoc/y2022/Day04/: Day04.re  Day04Data.re
src/aoc/y2022/Day05/: Day05.re
src/aoc/y2022/Day06/: Day06.re  Day06Data.re
src/aoc/y2022/Day07/: Day07.re
src/aoc/y2022/Day08/: Day08.re  Day08Data.re
src/aoc/y2022/Day09/: Day09.re  Day09Data.re  Position.re  Translation.re
src/aoc/y2023/: dune
src/aoc/y2023/Day01/: Day01.re  Day01Data.re
src/aoc/y2023/Day02/: Day02.re  Day02.rei  Day02Data.re
src/aoc/y2023/Day03/: Day03.re  Day03Data.re
src/aoc/y2023/Day04/: Day04.re  Day04Data.re
src/aoc/y2023/Day05/: Day05.re  Day05Data.re
src/aoc/y2023/Day06/: Day06.re  Day06Data.re
src/aoc/y2023/Day07/: Day07.re  Day07Data.re  Day07Part1.re  Day07Part2.re
src/aoc/y2023/Day08/: Day08.re  Day08Data.re  Day08Part1.re  Day08Part2.re
src/aoc/y2023/Day09/: Day09.re  Day09Data.re
src/aoc/y2023/Day10/: Day10.re  Day10Data.re
src/aoc/y2023/Day11/: Day11.re  Day11Data.re
(+2 files in other folders)
